<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/appBar_menu"
        android:title="@string/appbar_menu"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/date_filter"
                android:title="@string/date" />
            <!--    showaAsAction retir un element de la liste deroulante pour qu'il ai son propre icon-->
            <item
                android:id="@+id/room_1"
                android:title="@string/room_1" />
            <item
                android:id="@+id/room_2"
                android:title="@string/room_2" />
            <item
                android:id="@+id/room_3"
                android:title="@string/room_3" />
            <item
                android:id="@+id/room_4"
                android:title="@string/room_4" />
            <item
                android:id="@+id/room_5"
                android:title="@string/room_5" />
            <item
                android:id="@+id/room_6"
                android:title="@string/room_6" />
            <item
                android:id="@+id/room_7"
                android:title="@string/room_7" />
            <item
                android:id="@+id/room_8"
                android:title="@string/room_8" />
            <item
                android:id="@+id/room_9"
                android:title="@string/room_9" />
            <item
                android:id="@+id/room_10"
                android:title="@string/room_10" />
            <item
                android:id="@+id/no_filter"
                android:title="@string/no_filter" />
        </menu>
    </item>
</menu>